Visual z-index fix when hovering over close table icon

--- a/src/static/scss/interface.scss
+++ b/src/static/scss/interface.scss
@@ -40,6 +40,7 @@
 
 #table.active .rightTopIcons {
     top: 6px;
+    z-index: $zIndexInterface - 2;
 }
 
 #toolbarIcons {
